# blockcomet-dev

./: .gitignore  README.md  service.yml
.circleci/: config.yml
.github/workflows/: code_coverage.yml  gae.yml  gae_backend.yml  gae_frontend.yml  jest.yml  pytest.yml  upload_code_climate.yml
app/client/: Dockerfile  app.yaml  babel.config.js  jest.config.js  package-lock.json  package.json  start_app.sh
app/client/public/: index.html
app/client/src/: AdminLogin.js  AdminNavigationbar.js  App.css  App.js  App.test.js  CreateProduct.js  Dashboard.js  Home.js  Navigationbar.js  Validate.js  config.js  helpers.js  index.js  useToken.js
app/client/src/css/: AdminLogin.css  App.css  CreateProduct.css  Dashboard.css  Navigationbar.css  Validate.css
app/client/src/test/: AdminLogin.test.js  App.test.js
app/server/: .gitignore  Dockerfile  app.yaml  heroku.yml  main.py  pyproject.toml  setup.py  setup_server  setup_server.sh
app/server/server/: add_users.py  auth.py  check_flushed.py  config.py  main.py  schemas.py  security.py
app/server/src/: main.py
app/server/tests/: test_main.py
bigchaindb/: local_setup  node_setup
server/: Dockerfile  setup_server.sh
server/server/: config.py  main.py
server/server/scripts/: add_users.py
server/tests/: test_main.py
