[tool.poetry]
name = "py-backend"
version = "0.1.0"
description = "BlockComet Python Server"
authors = ["Rohit Bansal <rohitbansal0602@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9.2"
fastapi = "^0.73.0"
bigchaindb-driver = "^0.6.2"
sentry-sdk = "^1.5.7"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
