[tool.poetry]
name = "py-backend"
version = "0.1.0"
description = "BlockComet Python Server"
authors = ["Rohit Bansal <rohitbansal0602@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8.10"
fastapi = "^0.73.0"
bigchaindb-driver = "^0.6.2"
sentry-sdk = "^1.5.7"
pytest = "^7.0.1"
pymongo = {extras = ["srv"], version = "^4.0.2"}
uvicorn = "^0.17.6"
passlib = "^1.7.4"
python-jose = "^3.3.0"
pydantic = {extras = ["email"], version = "^1.9.0"}
python-multipart = "^0.0.5"
dnspython = "^2.2.1"
bcrypt = "^3.2.0"
coverage = "^6.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
